--- a/ModelBindingDemo/Views/Developer/Create.cshtml
+++ b/ModelBindingDemo/Views/Developer/Create.cshtml
@@ -3,25 +3,28 @@
     ViewData["Title"] = "Create";
 }
 
-<h3>Create a new Developer</h3>
+<h3 class="text-center">Create a new Developer</h3>
 
-<form class="mt-3" method="post" asp-action="Create" asp-controller="Developer">
+<form class="mt-4 w-75 mx-auto" method="post" asp-action="Create" asp-controller="Developer">
     <div class="row mb-3">
         <label for="name" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
             <input class="form-control" asp-for="Name">
+            <span asp-validation-for="Name" class="text-danger d-flex justify-content-end"></span>
         </div>
     </div>
     <div class="row mb-3">
         <label for="gender" class="col-sm-2 col-form-label">Gender</label>
         <div class="col-sm-10">
             <input class="form-control" asp-for="Gender">
+            <span asp-validation-for="Gender" class="text-danger d-flex justify-content-end"></span>
         </div>
     </div>
     <div class="row mb-3">
         <label for="type" class="col-sm-2 col-form-label">Type</label>
         <div class="col-sm-10">
             <input class="form-control" asp-for="Type">
+            <span asp-validation-for="Type" class="text-danger d-flex justify-content-end"></span>
         </div>
     </div>
     <div class="d-flex justify-content-end">
