Added partial view

--- a/ModelBindingDemo/Views/Developer/Details.cshtml
+++ b/ModelBindingDemo/Views/Developer/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model Developer
 @{
     ViewData["Title"] = "Details";
-    ViewData["ShowButton"] = false;
+    ViewData["ShowUser"] = false;
+    ViewData["ShowDeleteButton"] = true;
 }
 
 <div class="card text-white bg-info mb-3">
