--- a/ModelBindingDemo/Views/Note/Index.cshtml
+++ b/ModelBindingDemo/Views/Note/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model List<Note>
 @{
     ViewData["Title"] = "Index";
-    ViewData["ShowButton"] = true;
+    ViewData["ShowUser"] = true;
+    ViewData["ShowDeleteButton"] = false;
 }
 
 <div class="row align-items-center">
