--- a/ModelBindingDemo/Views/Shared/_DevCard.cshtml
+++ b/ModelBindingDemo/Views/Shared/_DevCard.cshtml
@@ -3,10 +3,18 @@
 <div class="col-12 col-md-6 col-lg-4 mb-3">
     <div class="card border-info">
         <a class="text-decoration-none text-secondary" asp-action="Details" asp-route-id="@Model.Id">
+            <div class="card-header">
+                <h5 class="card-title mt-2"><i class="bi bi-person-fill mr-2"></i>@Model.Name</h5>
+            </div>
             <div class="card-body">
-                <h5 class="card-title">@Model.Name</h5>
-                <p class="card-text">Gender: @Model.Gender</p>
-                <p class="card-text">Type: @Model.Type</p>
+                <div class="d-flex justify-content-between">
+                    <p class="card-text">Gender: @Model.Gender</p>
+                    <p class="card-text">
+                        <i class="bi bi-code"></i>
+                            @Model.Type
+                        <i class="bi bi-code-slash"></i>
+                    </p>
+                </div>
             </div>
         </a>
         <div class="card-footer d-flex justify-content-end">
