--- a/ModelBindingDemo/Views/Shared/_NoteCard.cshtml
+++ b/ModelBindingDemo/Views/Shared/_NoteCard.cshtml
@@ -7,7 +7,7 @@
 <div class="col-12 col-md-6 col-lg-4 mb-3">
     <div class="card border-primary">
         <div class="card-header d-flex justify-content-between align-items-center">
-            <h5 class="card-title mt-2">@Model.Title</h5>
+            <h5 class="card-title mt-2"><i class="bi bi-sticky-fill mr-2"></i>@Model.Title</h5>
             @if (IsShowDeleteButton)
             {
                 <button type="button" class="btn btn-outline-danger noteConfirmDelete" data-toggle="modal" data-target="#confirmDeleteModal" data-assigned-id=@Model.Id data-dev-id=@Model.Developer.Id>
