--- a/ModelBindingDemo/Views/Developer/Create.cshtml
+++ b/ModelBindingDemo/Views/Developer/Create.cshtml
@@ -27,7 +27,19 @@
             <span asp-validation-for="Type" class="text-danger d-flex justify-content-end"></span>
         </div>
     </div>
+@*    <div class="row mb-3" id="skillContainer">
+        <div class="col-12">
+            <div class="row d-flex justify-content-between">
+                <label for="skills" class="col-sm-2 col-form-label">Skills</label>
+                <div class="col-sm-2 text-right">
+                    <a class="btn btn-success text-white w-100" id="addSkillBtn">Add Skill</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button id="testBtn">test</button>*@
     <div class="d-flex justify-content-end">
         <button type="submit" class="btn btn-primary">Create</button>
     </div>
 </form>
+
