--- a/ModelBindingDemo/Views/Shared/_DevCard.cshtml
+++ b/ModelBindingDemo/Views/Shared/_DevCard.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Developer
 
 <div class="col-12 col-md-6 col-lg-4 mb-3">
-    <div class="card border-info">
-        <a class="text-decoration-none text-secondary" asp-action="Details" asp-route-id="@Model.Id">
+    <div class="card border-secondary">
+        <a class="text-decoration-none text-secondary" asp-action="Details" asp-route-id="@Model.DeveloperId">
             <div class="card-header">
                 <h5 class="card-title mt-2"><i class="bi bi-person-fill mr-2"></i>@Model.Name</h5>
             </div>
@@ -18,8 +18,8 @@
             </div>
         </a>
         <div class="card-footer d-flex justify-content-end">
-            <a class="btn btn-info mr-2" asp-action="Edit" asp-controller="Developer" asp-route-id="@Model.Id">Edit</a>
-            <button type="button" class="btn btn-outline-danger devConfirmDelete" data-toggle="modal" data-target="#confirmDeleteModal" data-assigned-id=@Model.Id>
+            <a class="btn btn-dark mr-2" asp-action="Edit" asp-controller="Developer" asp-route-id="@Model.DeveloperId">Edit</a>
+            <button type="button" class="btn btn-outline-danger devConfirmDelete" data-toggle="modal" data-target="#confirmDeleteModal" data-assigned-id=@Model.DeveloperId>
                 Delete
             </button>
         </div>
