--- a/ModelBindingDemo/Views/_ViewImports.cshtml
+++ b/ModelBindingDemo/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ModelBindingDemo
 @using ModelBindingDemo.Models
+@using ModelBindingDemo.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
