Create and Delete functions for dev-skill added

--- a/ModelBindingDemo/Views/Developer/EditSkills.cshtml
+++ b/ModelBindingDemo/Views/Developer/EditSkills.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DeveloperEditSkillsViewModel
 
-<h1>Edit Skills of @Model.Developer.Name</h1>
+<h3>Edit Skills of @Model.Developer.Name</h3>
 
 <div class="row mb-4">
     @foreach (DeveloperSkill devSkill in Model.DeveloperSkills)
@@ -25,7 +25,9 @@
                     <button class="btn btn-outline-dark"><i class="bi bi-upload"></i></button>
                 </div>
                 <div class="col-1 text-right">
-                    <button class="btn btn-outline-danger"><i class="bi bi-trash-fill"></i></button>
+                    <button class="btn btn-outline-danger devSkillConfirmDelete" data-toggle="modal" data-target="#confirmDeleteModal" data-assigned-id=@devSkill.DeveloperSkillId>
+                        <i class="bi bi-trash-fill"></i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -43,10 +45,11 @@
         </div>
     </div>
 </div>
-<button id="testBtn" class="btn btn-primary text-white float-right" data-dev-detailsid=@Model.Developer.DeveloperId>
-    Submit Skills
-</button>
-
+<div class="d-flex justify-content-end mt-4 mb-5">
+    <button id="testBtn" class="btn btn-primary text-white" data-dev-detailsid=@Model.Developer.DeveloperId>
+        Submit Skills
+    </button>
+</div>
 
 @section Scripts
     {
