--- a/ModelBindingDemo/Views/Developer/EditSkills.cshtml
+++ b/ModelBindingDemo/Views/Developer/EditSkills.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DeveloperEditSkillsViewModel
 
-<h3>Edit Skills of @Model.Developer.Name</h3>
+<h3>Edit skills of @Model.Developer.Name</h3>
 
 <div class="row mb-4">
     @foreach (DeveloperSkill devSkill in Model.DeveloperSkills)
@@ -22,10 +22,12 @@
                     <input class="form-control" asp-for="@devSkill.SkillLevel" readonly>
                 </div>
                 <div class="col-1 text-right">
-                    <button class="btn btn-outline-dark"><i class="bi bi-upload"></i></button>
+                    <button class="btn btn-outline-dark w-100">
+                        <i class="bi bi-upload"></i>
+                    </button>
                 </div>
                 <div class="col-1 text-right">
-                    <button class="btn btn-outline-danger devSkillConfirmDelete" data-toggle="modal" data-target="#confirmDeleteModal" data-assigned-id=@devSkill.DeveloperSkillId>
+                    <button class="btn btn-outline-danger w-100 devSkillConfirmDelete" data-toggle="modal" data-target="#confirmDeleteModal" data-assigned-id=@devSkill.DeveloperSkillId>
                         <i class="bi bi-trash-fill"></i>
                     </button>
                 </div>
@@ -35,25 +37,36 @@
 </div>
 <hr />
 
+<div class="alert alert-danger alert-dismissible" role="alert" id="duplicateAlert">
+    <strong>Duplicate Data!</strong> You should check in on some of the fields below and try again.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+
 <div class="row mt-4 mb-3" id="skillContainer">
     <div class="col-12">
-        <div class="row d-flex justify-content-between">
+        <div class="row justify-content-between">
             <label for="skills" class="col-sm-2 col-form-label">Skills</label>
             <div class="col-sm-2 text-right">
-                <a class="btn btn-secondary text-white w-100" id="addSkillBtn">Add Skill</a>
+                <button class="btn btn-secondary text-white w-100" id="addSkillBtn">Add Skill</button>
             </div>
         </div>
     </div>
 </div>
-<div class="d-flex justify-content-end mt-4 mb-5">
-    <button id="testBtn" class="btn btn-primary text-white" data-dev-detailsid=@Model.Developer.DeveloperId>
-        Submit Skills
-    </button>
+<div class="row justify-content-end mt-4 mb-5">
+    <div class="col-2">
+        <button id="testBtn" class="btn btn-primary text-white w-100" data-dev-detailsid=@Model.Developer.DeveloperId>
+            Submit Skills
+        </button>
+    </div>
 </div>
 
 @section Scripts
     {
     <script>
+        $("#duplicateAlert").hide();
+
         $("#addSkillBtn").click(function (e) {
             e.preventDefault();
             $.ajax({
@@ -73,7 +86,7 @@
         });
 
         $('#testBtn').click(function (e) {
-            //e.preventDefault();
+            e.preventDefault();
             var devIdFromDetails = $(this).data('dev-detailsid');
             var devSkills = $("select[name='devSkills[]']").map(function () { return $(this).val(); }).get();
             var devSkillsLevel = $("input[name='devSkillsLevel[]']").map(function () { return $(this).val(); }).get();
@@ -89,7 +102,11 @@
                     window.location.href = response.redirectToUrl;
                 },
                 error: function (xhr, status, error) {
-                    console.log("An error occurred while posting details.");
+                    if (xhr.status === 400) {
+                        $("#duplicateAlert").show();
+                    } else {
+                        alert("An expected error occurred: " + error);
+                    }
                 }
             });
         });
