--- a/ModelBindingDemo/Views/Skill/Index.cshtml
+++ b/ModelBindingDemo/Views/Skill/Index.cshtml
@@ -14,9 +14,9 @@
 <div class="row mt-3">
     @foreach (Skill skill in Model)
     {
-        <div class="col-3 mb-3">
+        <div class="col-3 mb-4">
             <div class="bg-dark rounded d-flex justify-content-between align-items-center">
-                <a class="text-white text-capitalize pl-3 w-100" asp-action="Details">@skill.SkillName</a>
+                <a class="text-white text-capitalize pl-3 w-100" asp-action="Details" asp-route-id="@skill.SkillId">@skill.SkillName</a>
                 <div class="btn-group">
                     <button class="btn btn-dark rounded-0"><i class="bi bi-pencil-square"></i></button>
                     <button type="button" class="btn btn-danger skillConfirmDelete" data-toggle="modal" data-target="#confirmDeleteModal" data-assigned-id=@skill.SkillId>
