--- a/ModelBindingDemo/Views/Note/Index.cshtml
+++ b/ModelBindingDemo/Views/Note/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Index";
     ViewData["ShowUser"] = true;
-    ViewData["ShowDeleteButton"] = false;
+    ViewData["ShowNoteButtons"] = false;
 }
 
 <div class="row align-items-center">
