--- a/ModelBindingDemo/Views/Skill/_AddSkillFormPartialView.cshtml
+++ b/ModelBindingDemo/Views/Skill/_AddSkillFormPartialView.cshtml
@@ -11,4 +11,8 @@
         </div>
     </div>
     <span asp-validation-for="SkillName" class="text-danger"></span>
+    @if(TempData["SuccessMessage"] != null)
+    {
+        <span class="text-success">@TempData["SuccessMessage"]</span>
+    }
 </form>
