--- a/ModelBindingDemo/Views/Developer/Edit.cshtml
+++ b/ModelBindingDemo/Views/Developer/Edit.cshtml
@@ -3,27 +3,31 @@
     ViewData["Title"] = "Edit";
 }
 
-<h3>Edit a new Developer</h3>
+<h3 class="text-center">Edit a new Developer</h3>
 
-<form class="mt-3" method="post" asp-action="Edit" asp-controller="Developer">
+<form class="mt-3 w-75 mx-auto" method="post" asp-action="Edit" asp-controller="Developer">
     <div class="row mb-3">
         <label for="name" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
             <input class="form-control" asp-for="Name">
+            <span asp-validation-for="Name" class="text-danger d-flex justify-content-end"></span>
         </div>
     </div>
     <div class="row mb-3">
         <label for="gender" class="col-sm-2 col-form-label">Gender</label>
         <div class="col-sm-10">
             <input class="form-control" asp-for="Gender">
+            <span asp-validation-for="Gender" class="text-danger d-flex justify-content-end"></span>
         </div>
     </div>
     <div class="row mb-3">
         <label for="type" class="col-sm-2 col-form-label">Type</label>
         <div class="col-sm-10">
             <input class="form-control" asp-for="Type">
+            <span asp-validation-for="Type" class="text-danger d-flex justify-content-end"></span>
         </div>
     </div>
+
     <div class="d-flex justify-content-end">
         <button type="submit" class="btn btn-primary">Update</button>
     </div>
