--- a/ModelBindingDemo/Views/Skill/Index.cshtml
+++ b/ModelBindingDemo/Views/Skill/Index.cshtml
@@ -11,19 +11,78 @@
     <h3 class="pl-3">Skills List</h3>
 </div>
 
+<style>
+    .skillEditGroup:hover {
+        background: #212529 !important;
+    }
+</style>
+
 <div class="row mt-3">
     @foreach (Skill skill in Model)
     {
-        <div class="col-3 mb-4">
-            <div class="bg-dark rounded d-flex justify-content-between align-items-center">
-                <a class="text-white text-capitalize pl-3 w-100" asp-action="Details" asp-route-id="@skill.SkillId">@skill.SkillName</a>
+        <form class="col-12 col-md-6 col-lg-3 mb-4" method="post" asp-action="Update" asp-controller="Skill">
+            <div class="bg-dark rounded d-flex justify-content-between align-items-center skillEditGroup">
+                <input asp-for="@skill.SkillId" hidden>
+                <a class="w-100 text-decoration-none" asp-action="Details" asp-route-id="@skill.SkillId">
+                    <input class="text-white text-capitalize pl-3 w-100 h-100 bg-transparent form-control shadow-none border-0 edit-input-@skill.SkillId" value="@skill.SkillName" asp-for="@skill.SkillName" readonly="true" style="cursor: pointer;">
+                </a>
                 <div class="btn-group">
-                    <button class="btn btn-dark rounded-0"><i class="bi bi-pencil-square"></i></button>
+                    <div class="btn btn-dark rounded-0 skillEditBtn" data-edit-id="@skill.SkillId" id='@(skill.SkillId + "editBtn")' style="cursor: pointer;">
+                        <i class="bi bi-pencil-square"></i>
+                    </div>
+
+                    <div class="btn btn-dark rounded-0 skillCancelBtn" data-edit-id="@skill.SkillId" data-original-value="@skill.SkillName" id='@(skill.SkillId + "cancelBtn")' style="cursor: pointer;">
+                        <i class="bi bi-x"></i>
+                    </div>
+                    <button type="submit" class="btn btn-dark rounded-0 skillUpdateBtn" id='@(skill.SkillId + "updateBtn")' asp-action="Update" asp-controller="Skill">
+                        <i class="bi bi-upload"></i>
+                    </button>
+
                     <button type="button" class="btn btn-danger skillConfirmDelete" data-toggle="modal" data-target="#confirmDeleteModal" data-assigned-id=@skill.SkillId>
                         <i class="bi bi-trash-fill"></i>
                     </button>
                 </div>
             </div>
-        </div>
+        </form>
     }
 </div>
+
+@section Scripts
+    {
+    <script>
+        $('.skillUpdateBtn').hide();
+        $('.skillCancelBtn').hide();
+
+        $('.skillEditBtn').on('click', function () {
+            let editId = $(this).data('edit-id');
+            let title = $(`.edit-input-${editId}`).val();
+            //let flag = $(`.edit-input-${editId}`).prop('readonly');
+
+            let editInput = $(`.edit-input-${editId}`);
+
+            if (editInput.parent().is("a")) {
+                editInput.unwrap();
+            }
+
+            //editInput.unwrap();
+            editInput.css("cursor", "text");
+            editInput.prop('readonly', false).focus().val('').val(title);
+
+            $(`#${editId}editBtn`).hide();
+            $(`#${editId}updateBtn`).show();
+            $(`#${editId}cancelBtn`).show();
+        });
+
+        $('.skillCancelBtn').click(function(e) {
+            let editId = $(this).data('edit-id');
+            let originalValue = $(this).data('original-value');
+            let editInput = $(`.edit-input-${editId}`);
+
+            editInput.prop('readonly', true).val('').val(originalValue);
+
+            $(`#${editId}editBtn`).show();
+            $(`#${editId}updateBtn`).hide();
+            $(`#${editId}cancelBtn`).hide();
+        })
+    </script>
+}
