--- a/ModelBindingDemo/Views/Developer/Create.cshtml
+++ b/ModelBindingDemo/Views/Developer/Create.cshtml
@@ -5,7 +5,7 @@
 
 <h3 class="text-center">Create a new Developer</h3>
 
-<form class="mt-4 w-75 mx-auto" method="post" asp-action="Create" asp-controller="Developer">
+<form class="mt-4 w-100 w-md-75 mx-auto" method="post" asp-action="Create" asp-controller="Developer">
     <div class="row mb-3">
         <label for="name" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
