--- a/ModelBindingDemo/Views/Note/Create.cshtml
+++ b/ModelBindingDemo/Views/Note/Create.cshtml
@@ -5,7 +5,7 @@
 
 <h3 class="text-center">Create a new Note</h3>
 
-<form class="mt-4 w-75 mx-auto" method="post" asp-controller="Note" asp-action="Create">
+<form class="mt-4 w-100 w-md-75 mx-auto" method="post" asp-controller="Note" asp-action="Create">
     <div class="row mb-3">
         <label for="name" class="col-sm-2 col-form-label">Select Dev</label>
         <div class="col-sm-10">
