--- a/ModelBindingDemo/wwwroot/css/site.css
+++ b/ModelBindingDemo/wwwroot/css/site.css
@@ -61,6 +61,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  background-color: #f2f2f2;
 }
 .footer {
   position: absolute;
