--- a/ModelBindingDemo/Views/_ViewImports.cshtml
+++ b/ModelBindingDemo/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ModelBindingDemo
 @using ModelBindingDemo.Models
 @using ModelBindingDemo.ViewModel
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
