--- a/ModelBindingDemo/Views/Account/Login.cshtml
+++ b/ModelBindingDemo/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 
 <h3 class="text-center">Login to your Account</h3>
 
-<form class="mt-4 w-100 w-md-75 mx-auto" method="post" asp-action="Login" asp-controller="Account">
+<form class="mt-4 w-100 w-md-75 w-lg-50 mx-auto" method="post" asp-action="Login" asp-controller="Account">
     <div class="row mb-3">
         <label for="name" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
