--- a/ModelBindingDemo/Views/_ViewImports.cshtml
+++ b/ModelBindingDemo/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using ModelBindingDemo
-@using ModelBindingDemo.Models
-@using ModelBindingDemo.ViewModel
+﻿@using ModelBindingDemo;
+@using Dev.Entities.Models;
+@using ModelBindingDemo.ViewModel;
+@using ModelBindingDemo.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
